--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -20,6 +20,7 @@ const {
   fg,
   bg,
   pBg = bg,
+  pFg = fg,
   ...props
 } = Astro.props
 
@@ -29,6 +30,7 @@ const animObj = {
   "data-fg": fg,
   "data-bg": bg,
   "data-p-bg": pBg,
+  "data-p-fg": pFg,
 }
 ---
 
