--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,27 +11,21 @@ import LucideIcon from '@/components/LucideIcon.astro'
 	<div
 		class="flex items-center xl:items-start justify-between text-xs font-mono"
 	>
-		<p class="text-base font-bold select-none">[MK24]</p>
+		<p class="text-base font-medium select-none">[MK25]</p>
 		<!-- Desktop -->
 		<div class="hidden xl:flex text-xs gap-x-12">
 			<p>
 				Write me an email
-				<Link class="block" href="mailto:michelangelovalderrama@gmail.com"
-					>michelangelovalderrama@gmail.com</Link
+				<Link class="block" href="mailto:hi@imangelo.dev"
+					>hi@imangelo.dev</Link
 				>
 			</p>
 			<p>
 				Social:
 				<span class="flex gap-x-2">
-					<Link
-						href="https://github.com/michelangelo-valderrama"
-						target="_blank">GTHB</Link
-					>
-					<Link
-						href="https://www.linkedin.com/in/michelangelo-v-2a71702b1"
-						target="_blank">LI</Link
-					>
-					<Link href="https://twitter.com/VTokyo9" target="_blank">TW</Link>
+					<Link href="https://github.com/michelangelo-valderrama">GTHB</Link>
+					<Link href="https://www.linkedin.com/in/michelangelo-v-2a71702b1">LI</Link>
+					<Link href="https://twitter.com/imangelo84">X</Link>
 				</span>
 			</p>
 		</div>
